# PosSystemPro

./: .replit  README.md  app.py  config.py  create_admin.py  create_test_data.py  pyproject.toml
attached_assets/: Pasted-Contexte-D-veloppez-une-application-compl-te-de-point-de-vente-POS-en-utilisant-Python-3-x-et-Tki-1745760713234.txt  Pasted-Contexte-D-veloppez-une-application-compl-te-de-point-de-vente-POS-en-utilisant-Python-3-x-et-Tkin-1745748721076.txt
controllers/: __init__.py  auth_controller.py  backup_controller.py  cash_register_controller.py  category_controller.py  customer_controller.py  debt_controller.py  invoice_controller.py  payment_controller.py  product_controller.py  report_controller.py  stock_controller.py  user_controller.py
db/: schema.sql
models/: __init__.py  base_model.py  cash_register.py  category.py  customer.py  customer_debt.py  database.py  invoice.py  invoice_item.py  payment.py  product.py  stock.py  user.py
utils/: __init__.py  currency_formatter.py  export_utils.py
views/: __init__.py  backup_view.py  base_view.py  cash_register_view.py  category_view.py  customer_view.py  debt_view.py  invoice_view.py  login_view.py  main_view.py  payment_view.py  product_view.py  report_view.py  stock_view.py  user_view.py
views/components/: __init__.py  data_table.py  form_widgets.py  message_box.py
